[package]
name = "mini-assets"
version = "0.1.0-dev"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mini_assets"
path = "src/lib.rs"

[[bin]]
name = "mini-assets-gen"
path = "src/bin/gen.rs"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.4"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
chrono = "0.4"
magick_rust = { git="https://github.com/nlfiedler/magick-rust", branch="master" }
